# Quat-Investing

./: .gitignore  README.md
Backend/: Anomalies.py  Intrinsic.py  app.py  app_api.py
Frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
Frontend/AI/investing/: README.md  pyproject.toml
Frontend/AI/investing/src/investing/: crew.py  main.py  server.py
Frontend/AI/investing/src/investing/config/: agents.yaml  tasks.yaml
Frontend/AI/investing/src/investing/tools/: search.py
Frontend/src/: App.tsx
Frontend/src/Components/AI/: Ai.tsx
Frontend/src/Components/Graph/: Graph.tsx
Frontend/src/Components/Search/: Search.tsx
Frontend/src/Data/: types.ts
Frontend/src/Pages/Invest/: Invest.tsx
Program Logic/: Basic Plan.txt  JSE_stocks.csv  Pseudo cODE.txt  investing.drawio  update.drawio
