[project]
name = "investing"
version = "0.1.0"
description = "Investing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
investing = "investing.main:run"
run_crew = "investing.main:run"
train = "investing.main:train"
replay = "investing.main:replay"
test = "investing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
